samples/_failures_safe/1761221886_64a947_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e468a9c.c: In function ‘main’:
./samples/SAFE/__tmp_5e468a9c.c:171:49: error: expected ‘)’ at end of input
  171 |         if (fgets(buffer, sizeof(buffer), stdin)
      |            ~                                    ^
      |                                                 )
./samples/SAFE/__tmp_5e468a9c.c:171:9: error: expected declaration or statement at end of input
  171 |         if (fgets(buffer, sizeof(buffer), stdin)
      |         ^~
./samples/SAFE/__tmp_5e468a9c.c:171:9: error: expected declaration or statement at end of input
